Added flash to history button when a new item is added

--- a/css/style.less
+++ b/css/style.less
@@ -83,6 +83,12 @@ body {
 #keypad .btn-history {
 	font-size: 18px;
 	width: 160px;
+	-webkit-transition: all 0.2s ease;
+	        transition: all 0.2s ease;
+}
+#keypad .flash {
+	color: #fff;
+	background: #569286;
 }
 #history {
 	color: #494949;
