Minor CSS cleanup

--- a/css/style.less
+++ b/css/style.less
@@ -203,9 +203,7 @@ button {
 			        transform: translate3d(0, 130px, 0);
 		}
 	}
-	#list li button {
-		height: 40px;
-	}
+	#list li button {height: 40px;}
 	#keypad {
 		.row1 {bottom: 275px;}
 		.row2 {bottom: 220px;}
