--- a/css/style.less
+++ b/css/style.less
@@ -214,3 +214,16 @@ button {
 	}
 
 }
+
+
+/* LANDSCAPE
+   ---------------------------------- */
+
+#landscape {
+	display: none;
+	p {margin-top: 108px;}
+}
+body.landscape {
+	#calculator {display: none;}
+	#landscape {display: block;}
+}
