--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@ p {
   color: #569286;
   background: #fff;
   text-align: right;
-  border-bottom: 6px solid #ebe3db;
+  border-bottom: 6px solid #569286;
   width: 296px;
   height: 36px;
   margin-bottom: 0;
@@ -157,13 +157,14 @@ p {
    ---------------------------------- */
 #history {
   color: #494949;
-  background: #f7eee6;
+  background: rgba(247, 238, 230, 0.95);
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   position: absolute;
   width: 320px;
   height: 395px;
   z-index: 3;
-  -webkit-transform: translate3d(0, -243px, 3px);
-  transform: translate3d(0, -243px, 3px);
+  -webkit-transform: translate3d(0, -253px, 3px);
+  transform: translate3d(0, -253px, 3px);
   -webkit-transition: all .35s;
   transition: all .35s;
 }
@@ -189,7 +190,7 @@ p {
   margin: 0;
 }
 #list li {
-  border-top: 1px solid #ebe3db;
+  border-bottom: 1px solid #ebe3db;
   padding: 0;
 }
 #list li button {
@@ -197,6 +198,9 @@ p {
   border: none;
   width: 100%;
   height: 49px;
+}
+#list li:first-child {
+  border-top: 1px solid #ebe3db;
 }
 /* KEYPAD
    ---------------------------------- */
@@ -285,8 +289,8 @@ button:active {
     height: 55px;
   }
   #history {
-    -webkit-transform: translate3d(0, -265px, 3px);
-    transform: translate3d(0, -265px, 3px);
+    -webkit-transform: translate3d(0, -275px, 3px);
+    transform: translate3d(0, -275px, 3px);
   }
   #history .navbar {
     height: 35px;
