--- a/css/style.less
+++ b/css/style.less
@@ -62,7 +62,7 @@ p {
 	background: #fff;
 	text-align: right;
 	//text-overflow: ellipsis;
-	border-bottom: 6px solid #ebe3db;
+	border-bottom: 6px solid #569286;
 	width: 296px;
 	height: 36px;
 	margin-bottom: 0;
@@ -86,13 +86,14 @@ p {
 
 #history {
 	color: #494949;
-	background: #f7eee6;
+	background: rgba(247, 238, 230, 0.95);
+	-webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 	position: absolute;
 	width: 320px;
 	height: 395px;
 	z-index: 3;
-	-webkit-transform: translate3d(0, -243px, 3px);
-	        transform: translate3d(0, -243px, 3px);
+	-webkit-transform: translate3d(0, -253px, 3px);
+	        transform: translate3d(0, -253px, 3px);
 	-webkit-transition: all .35s;
 	        transition: all .35s;
 	.navbar {
@@ -117,7 +118,7 @@ p {
 	width: 100%;
 	margin: 0;
 	li {
-		border-top: 1px solid #ebe3db;
+		border-bottom: 1px solid #ebe3db;
 		padding: 0;
 		button {
 			position: static;
@@ -125,6 +126,7 @@ p {
 			width: 100%;
 			height: 49px;
 		}
+		&:first-child {border-top: 1px solid #ebe3db;}
 	}
 }
 
@@ -192,8 +194,8 @@ button {
 	#keypad button,
 	button {height: 55px;}
 	#history {
-		-webkit-transform: translate3d(0, -265px, 3px);
-		        transform: translate3d(0, -265px, 3px);
+		-webkit-transform: translate3d(0, -275px, 3px);
+		        transform: translate3d(0, -275px, 3px);
 		.navbar {
 			height: 35px;
 			padding-top: 8px;
