--- a/css/style.less
+++ b/css/style.less
@@ -4,24 +4,24 @@
 // Display
 @displayBgColor:        #fff;
 @displayTextColor:      #444;
-@equationTextColor:     #ff556f;
+@equationTextColor:     #099d93;
 @equationOperatorColor: #999;
 @displayRuleColor:      #e8e8e8;
-@displayThickRuleColor: #ff556f;
+@displayThickRuleColor: #099d93;
 
 // Keypad
-@keypadBgColor:         #eee;
+@keypadBgColor:         #ebedeb;
 @keypadTextColor:       #111;
 @keypadRuleColor:       #d9d9d9;
-@keypadActiveBgColor:   #ff556f;
+@keypadActiveBgColor:   #099d93;
 @keypadActiveTextColor: #fff;
 @equalsBgColor:         #d9d9d9;
 @equalsTextColor:       #000;
 
 // History
 @historyBgColor:        rgba(250, 250, 250, 0.95);
-@historyNavBgColor:     #ededed;
-@historyRuleColor:      #ededed;
+@historyNavBgColor:     #ebedeb;
+@historyRuleColor:      #ebedeb;
 
 
 /* RESET
@@ -120,8 +120,8 @@ p {
 	z-index: 3;
 	-webkit-transform: translate3d(0, -253px, 3px);
 	        transform: translate3d(0, -253px, 3px);
-	-webkit-transition: all .35s;
-	        transition: all .35s;
+	-webkit-transition: all .4s ease;
+	        transition: all .4s ease;
 	.navbar {
 		background: @historyNavBgColor;
 		text-align: center;
