Further minor design changes

--- a/css/style.less
+++ b/css/style.less
@@ -19,7 +19,7 @@
 @equalsTextColor:       #000;
 
 // History
-@historyBgColor:        rgba(250, 250, 250, 0.95);
+@historyBgColor:        rgba(250, 250, 250, 0.97);
 @historyNavBgColor:     #ebedeb;
 @historyRuleColor:      #ebedeb;
 
@@ -125,13 +125,13 @@ p {
 	.navbar {
 		background: @historyNavBgColor;
 		text-align: center;
-		height: 36px;
-		padding: 10px 12px 0;
+		height: 33px;
+		padding: 13px 12px 0;
 		span {
 			position: absolute;
 			top: -6px;
 			right: 0;
-			padding: 14px 12px 15px 20px;
+			padding: 16px 12px 15px 18px;
 		}
 	}
 	&.active {
@@ -198,6 +198,7 @@ button {
 		background: @equalsBgColor;
 		width: 160px;
 	}
+	.plus-minus {letter-spacing: 2px;}
 	.btn-history {
 		font-size: 18px;
 		width: 160px;
