--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,7 @@ p {
    ---------------------------------- */
 #history {
   color: #111111;
-  background: rgba(250, 250, 250, 0.95);
+  background: rgba(250, 250, 250, 0.97);
   -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   position: absolute;
   width: 320px;
@@ -171,14 +171,14 @@ p {
 #history .navbar {
   background: #ebedeb;
   text-align: center;
-  height: 36px;
-  padding: 10px 12px 0;
+  height: 33px;
+  padding: 13px 12px 0;
 }
 #history .navbar span {
   position: absolute;
   top: -6px;
   right: 0;
-  padding: 14px 12px 15px 20px;
+  padding: 16px 12px 15px 18px;
 }
 #history.active {
   -webkit-transform: translate3d(0, 152px, 0);
@@ -265,6 +265,9 @@ button:active {
   color: #000000;
   background: #d9d9d9;
   width: 160px;
+}
+#keypad .plus-minus {
+  letter-spacing: 2px;
 }
 #keypad .btn-history {
   font-size: 18px;
