--- a/css/style.css
+++ b/css/style.css
@@ -381,3 +381,19 @@ body.install #app-icon {
   height: 125px;
   margin: 0 auto 20px;
 }
+body.install #twitter {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  color: #099d93;
+  text-align: center;
+  font-size: 14px;
+  line-height: 20px;
+  text-decoration: none;
+  text-shadow: 0 1px 2px #000;
+  width: 130px;
+  margin-left: -65px;
+}
+body.install #twitter:hover {
+  color: #d9d9d9;
+}
