--- a/css/style.less
+++ b/css/style.less
@@ -296,4 +296,18 @@ body.install {
 		height: 125px;
 		margin: 0 auto 20px;
 	}
+	#twitter {
+		position: fixed;
+		bottom: 20px;
+		left: 50%;
+		color: @keypadActiveBgColor;
+		text-align: center;
+		font-size: 14px;
+		line-height: 20px;
+		text-decoration: none;
+		text-shadow: 0 1px 2px #000;
+		width: 130px;
+		margin-left: -65px;
+		&:hover {color: #d9d9d9;}
+	}
 }
