--- a/css/style.less
+++ b/css/style.less
@@ -135,8 +135,8 @@ p {
 		}
 	}
 	&.active {
-		-webkit-transform: translate3d(0, 152px, 0);
-		        transform: translate3d(0, 152px, 0);
+		-webkit-transform: translate3d(0, 152px, 3px);
+		        transform: translate3d(0, 152px, 3px);
 	}
 }
 #list {
