--- a/css/style.less
+++ b/css/style.less
@@ -55,8 +55,7 @@ button, input, select, textarea {margin: 0;}
 body {
 	color: @displayTextColor;
 	background: @keypadBgColor;
-	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-	font-family: Helvetica, Arial, sans-serif;;
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 20px;
 	font-weight: 100;
 	line-height: 24px;
@@ -100,7 +99,6 @@ p {
 	        transform: translate3d(0, 0, 5px);
 	span {
 		color: @equationOperatorColor;
-		font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
 		font-weight: 300;
 		margin: 0 5px;
 		&.left-bracket {margin-left: 0;}
@@ -167,8 +165,8 @@ button {
 	position: absolute;
 	color: @keypadTextColor;
 	background: none;
-	font-family: Helvetica, Arial, sans-serif;;
-	font-size: 20px;
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-size: 22px;
 	font-weight: 100;
 	border: 1px solid @keypadRuleColor;
 	border-right: none;
@@ -295,8 +293,9 @@ body.install {
 		height: 180px;
 		margin-top: -90px;
 		span {
+			font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 			font-size: 16px;
-			font-weight: bold;
+			font-weight: 800;
 		}
 	}
 	#app-icon {
