Added styles for in-call status bar
- issue #28

--- a/css/style.css
+++ b/css/style.css
@@ -289,6 +289,20 @@ button:active {
   color: #ffffff;
   background: #099d93;
 }
+/* In Call */
+@media all and (max-height: 528px) {
+  #result {
+    padding: 26px 12px 2px;
+  }
+  #history {
+    -webkit-transform: translate3d(0, -273px, 3px);
+    transform: translate3d(0, -273px, 3px);
+  }
+  #history.active {
+    -webkit-transform: translate3d(0, 132px, 3px);
+    transform: translate3d(0, 132px, 3px);
+  }
+}
 /* iPhone 4
    ---------------------------------- */
 @media all and (max-height: 460px) {
@@ -337,6 +351,21 @@ button:active {
   }
   #keypad #bs {
     background-position: 27px 20px;
+  }
+}
+/* In Call */
+@media all and (max-height: 440px) {
+  #result {
+    padding: 16px 12px 0;
+    height: 43px;
+  }
+  #history {
+    -webkit-transform: translate3d(0, -295px, 3px);
+    transform: translate3d(0, -295px, 3px);
+  }
+  #history.active {
+    -webkit-transform: translate3d(0, 110px, 3px);
+    transform: translate3d(0, 110px, 3px);
   }
 }
 /* LANDSCAPE
