--- a/css/style.css
+++ b/css/style.css
@@ -1,442 +1,1 @@
-/* RESET
-   ---------------------------------- */
-html,
-body,
-div,
-span,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-abbr,
-address,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-samp,
-small,
-strong,
-sub,
-sup,
-var,
-b,
-i,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-blockquote,
-q {
-  quotes: none;
-}
-hr {
-  display: block;
-  height: 1px;
-  border: 0;
-  border-top: 1px solid #000;
-  margin: 1em 0;
-  padding: 0;
-}
-input,
-select {
-  vertical-align: middle;
-}
-button,
-input,
-select,
-textarea {
-  margin: 0;
-}
-/* LAYOUT
-   ---------------------------------- */
-body {
-  color: #444444;
-  background: #ebedeb;
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 20px;
-  font-weight: 100;
-  line-height: 24px;
-  margin: 0;
-}
-p {
-  text-align: center;
-  padding: 24px 36px 0;
-}
-/* DISPLAY
-   ---------------------------------- */
-#result {
-  background: #ffffff;
-  text-align: right;
-  font-size: 46px;
-  border-bottom: 1px solid #e8e8e8;
-  width: 296px;
-  height: 47px;
-  margin: 0;
-  padding: 36px 12px 12px;
-  z-index: 10;
-  -webkit-transform: translate3d(0, 0, 10px);
-  transform: translate3d(0, 0, 10px);
-}
-#equation {
-  color: #099d93;
-  background: #ffffff;
-  text-align: right;
-  border-bottom: 6px solid #099d93;
-  width: 296px;
-  height: 36px;
-  margin-bottom: 0;
-  padding: 14px 12px 0;
-  white-space: nowrap;
-  overflow: hidden;
-  z-index: 5;
-  -webkit-transform: translate3d(0, 0, 5px);
-  transform: translate3d(0, 0, 5px);
-}
-#equation span {
-  color: #999999;
-  font-weight: 300;
-  margin: 0 5px;
-}
-#equation span.left-bracket {
-  margin-left: 0;
-}
-#equation span.right-bracket {
-  margin-right: 0;
-}
-/* HISTORY
-   ---------------------------------- */
-#history {
-  color: #111111;
-  background: rgba(250, 250, 250, 0.97);
-  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  position: absolute;
-  width: 320px;
-  height: 395px;
-  z-index: 3;
-  -webkit-transform: translate3d(0, -253px, 3px);
-  transform: translate3d(0, -253px, 3px);
-  -webkit-transition: all .4s ease;
-  transition: all .4s ease;
-}
-#history .navbar {
-  background: #ebedeb;
-  text-align: center;
-  height: 33px;
-  padding: 13px 12px 0;
-}
-#history .navbar span {
-  position: absolute;
-  top: -6px;
-  right: 0;
-  padding: 16px 12px 15px 18px;
-}
-#history.active {
-  -webkit-transform: translate3d(0, 152px, 3px);
-  transform: translate3d(0, 152px, 3px);
-}
-#list {
-  list-style: none;
-  width: 100%;
-  margin: 0;
-}
-#list li {
-  border-bottom: 1px solid #ebedeb;
-  padding: 0;
-}
-#list li button {
-  position: static;
-  border: none;
-  width: 100%;
-  height: 49px;
-}
-#list li:first-child {
-  border-top: 1px solid #ebedeb;
-}
-/* KEYPAD
-   ---------------------------------- */
-#keypad button,
-button {
-  position: absolute;
-  color: #111111;
-  background: none;
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 22px;
-  font-weight: 100;
-  border: 1px solid #d9d9d9;
-  border-right: none;
-  border-bottom: none;
-  width: 80px;
-  height: 66px;
-  margin: 0;
-  padding: 0;
-}
-#keypad button:active,
-button:active {
-  color: #ffffff;
-  background: #099d93;
-}
-#keypad .row1 {
-  bottom: 330px;
-}
-#keypad .row2 {
-  bottom: 264px;
-}
-#keypad .row3 {
-  bottom: 198px;
-}
-#keypad .row4 {
-  bottom: 132px;
-}
-#keypad .row5 {
-  bottom: 66px;
-}
-#keypad .row6 {
-  bottom: 0;
-}
-#keypad .col1 {
-  left: 0;
-}
-#keypad .col2 {
-  left: 80px;
-}
-#keypad .col3 {
-  left: 160px;
-}
-#keypad .col4 {
-  left: 240px;
-}
-#keypad .row1 {
-  border-top: none;
-}
-#keypad .col1 {
-  border-left: none;
-}
-#keypad .equ {
-  color: #000000;
-  background: #d9d9d9;
-  width: 160px;
-}
-#keypad .plus-minus {
-  letter-spacing: 2px;
-}
-#keypad #bs {
-  background-image: url(../assets/backspace.png);
-  background-repeat: no-repeat;
-  background-position: 27px 25px;
-  background-size: 82px 16px;
-}
-#keypad #bs:active {
-  background-position-x: -30px;
-}
-#keypad .btn-history {
-  font-size: 18px;
-  width: 160px;
-  -webkit-transition: all 0.2s ease;
-  transition: all 0.2s ease;
-}
-#keypad .flash {
-  color: #ffffff;
-  background: #099d93;
-}
-/* In Call */
-@media all and (max-height: 528px) {
-  #result {
-    padding: 26px 12px 2px;
-  }
-  #history {
-    -webkit-transform: translate3d(0, -273px, 3px);
-    transform: translate3d(0, -273px, 3px);
-  }
-  #history.active {
-    -webkit-transform: translate3d(0, 132px, 3px);
-    transform: translate3d(0, 132px, 3px);
-  }
-}
-/* iPhone 4
-   ---------------------------------- */
-@media all and (max-height: 460px) {
-  #result {
-    padding: 26px 12px 4px;
-  }
-  #equation {
-    padding: 10px 12px 0;
-  }
-  #keypad button,
-  button {
-    height: 55px;
-  }
-  #history {
-    -webkit-transform: translate3d(0, -275px, 3px);
-    transform: translate3d(0, -275px, 3px);
-  }
-  #history .navbar {
-    height: 35px;
-    padding-top: 8px;
-  }
-  #history.active {
-    -webkit-transform: translate3d(0, 130px, 0);
-    transform: translate3d(0, 130px, 0);
-  }
-  #list li button {
-    height: 40px;
-  }
-  #keypad .row1 {
-    bottom: 275px;
-  }
-  #keypad .row2 {
-    bottom: 220px;
-  }
-  #keypad .row3 {
-    bottom: 165px;
-  }
-  #keypad .row4 {
-    bottom: 110px;
-  }
-  #keypad .row5 {
-    bottom: 55px;
-  }
-  #keypad .row6 {
-    bottom: 0;
-  }
-  #keypad #bs {
-    background-position: 27px 20px;
-  }
-}
-/* In Call */
-@media all and (max-height: 440px) {
-  #result {
-    padding: 16px 12px 0;
-    height: 43px;
-  }
-  #history {
-    -webkit-transform: translate3d(0, -295px, 3px);
-    transform: translate3d(0, -295px, 3px);
-  }
-  #history.active {
-    -webkit-transform: translate3d(0, 110px, 3px);
-    transform: translate3d(0, 110px, 3px);
-  }
-}
-/* LANDSCAPE
-   ---------------------------------- */
-#landscape {
-  display: none;
-}
-#landscape p {
-  margin-top: 108px;
-}
-body.landscape #calculator {
-  display: none;
-}
-body.landscape #landscape {
-  display: block;
-}
-/* INSTALL SCREEN
-   ---------------------------------- */
-#install {
-  display: none;
-}
-body.install {
-  background: #383838;
-  background-attachment: fixed;
-  height: 100%;
-}
-body.install #calculator {
-  display: none;
-}
-body.install #install {
-  display: block;
-  margin: 0 auto;
-  width: 175px;
-}
-body.install #instructions {
-  position: absolute;
-  top: 50%;
-  color: #d9d9d9;
-  text-align: center;
-  font-size: 14px;
-  line-height: 20px;
-  text-shadow: 0 1px 2px #000;
-  width: 175px;
-  height: 180px;
-  margin-top: -90px;
-}
-body.install #instructions span {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  font-weight: 800;
-}
-body.install #app-icon {
-  background: url(../assets/app-icon-large.png) no-repeat;
-  background-size: 125px 125px;
-  width: 125px;
-  height: 125px;
-  margin: 0 auto 20px;
-}
-body.install #twitter {
-  position: fixed;
-  bottom: 20px;
-  left: 50%;
-  color: #099d93;
-  text-align: center;
-  font-size: 14px;
-  line-height: 20px;
-  text-decoration: none;
-  text-shadow: 0 1px 2px #000;
-  width: 130px;
-  margin-left: -65px;
-}
-body.install #twitter:hover {
-  color: #d9d9d9;
-}
+html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}blockquote,q{quotes:none}hr{display:block;height:1px;border:0;border-top:1px solid #000;margin:1em 0;padding:0}input,select{vertical-align:middle}button,input,select,textarea{margin:0}body{color:#444;background:#ebedeb;font-family:"HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,sans-serif;font-size:20px;font-weight:100;line-height:24px;margin:0}p{text-align:center;padding:24px 36px 0}#result{background:#fff;text-align:right;font-size:46px;border-bottom:1px solid #e8e8e8;width:296px;height:47px;margin:0;padding:36px 12px 12px;z-index:10;-webkit-transform:translate3d(0,0,10px);transform:translate3d(0,0,10px)}#equation{color:#099d93;background:#fff;text-align:right;border-bottom:6px solid #099d93;width:296px;height:36px;margin-bottom:0;padding:14px 12px 0;white-space:nowrap;overflow:hidden;z-index:5;-webkit-transform:translate3d(0,0,5px);transform:translate3d(0,0,5px)}#equation span{color:#999;font-weight:300;margin:0 5px}#equation span.left-bracket{margin-left:0}#equation span.right-bracket{margin-right:0}#history{color:#111;background:rgba(250,250,250,0.97);-webkit-box-shadow:0 0 10px rgba(0,0,0,0.2);position:absolute;width:320px;height:395px;z-index:3;-webkit-transform:translate3d(0,-253px,3px);transform:translate3d(0,-253px,3px);-webkit-transition:all .4s ease;transition:all .4s ease}#history .navbar{background:#ebedeb;text-align:center;height:33px;padding:13px 12px 0}#history .navbar span{position:absolute;top:-6px;right:0;padding:16px 12px 15px 18px}#history.active{-webkit-transform:translate3d(0,152px,3px);transform:translate3d(0,152px,3px)}#list{list-style:none;width:100%;margin:0}#list li{border-bottom:1px solid #ebedeb;padding:0}#list li button{position:static;border:0;width:100%;height:49px}#list li:first-child{border-top:1px solid #ebedeb}#keypad button,button{position:absolute;color:#111;background:0;font-family:"HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,sans-serif;font-size:22px;font-weight:100;border:1px solid #d9d9d9;border-right:0;border-bottom:0;width:80px;height:66px;margin:0;padding:0}#keypad button:active,button:active{color:#fff;background:#099d93}#keypad .row1{bottom:330px}#keypad .row2{bottom:264px}#keypad .row3{bottom:198px}#keypad .row4{bottom:132px}#keypad .row5{bottom:66px}#keypad .row6{bottom:0}#keypad .col1{left:0}#keypad .col2{left:80px}#keypad .col3{left:160px}#keypad .col4{left:240px}#keypad .row1{border-top:0}#keypad .col1{border-left:none}#keypad .equ{color:#000;background:#d9d9d9;width:160px}#keypad .plus-minus{letter-spacing:2px}#keypad #bs{background-image:url(../assets/backspace.png);background-repeat:no-repeat;background-position:27px 25px;background-size:82px 16px}#keypad #bs:active{background-position-x:-30px}#keypad .btn-history{font-size:18px;width:160px;-webkit-transition:all .2s ease;transition:all .2s ease}#keypad .flash{color:#fff;background:#099d93}@media all and (max-height:528px){#result{padding:26px 12px 2px}#history{-webkit-transform:translate3d(0,-273px,3px);transform:translate3d(0,-273px,3px)}#history.active{-webkit-transform:translate3d(0,132px,3px);transform:translate3d(0,132px,3px)}}@media all and (max-height:460px){#result{padding:26px 12px 4px}#equation{padding:10px 12px 0}#keypad button,button{height:55px}#history{-webkit-transform:translate3d(0,-275px,3px);transform:translate3d(0,-275px,3px)}#history .navbar{height:35px;padding-top:8px}#history.active{-webkit-transform:translate3d(0,130px,0);transform:translate3d(0,130px,0)}#list li button{height:40px}#keypad .row1{bottom:275px}#keypad .row2{bottom:220px}#keypad .row3{bottom:165px}#keypad .row4{bottom:110px}#keypad .row5{bottom:55px}#keypad .row6{bottom:0}#keypad #bs{background-position:27px 20px}}@media all and (max-height:440px){#result{padding:16px 12px 0;height:43px}#history{-webkit-transform:translate3d(0,-295px,3px);transform:translate3d(0,-295px,3px)}#history.active{-webkit-transform:translate3d(0,110px,3px);transform:translate3d(0,110px,3px)}}#landscape{display:none}#landscape p{margin-top:108px}body.landscape #calculator{display:none}body.landscape #landscape{display:block}#install{display:none}body.install{background:#383838;background-attachment:fixed;height:100%}body.install #calculator{display:none}body.install #install{display:block;margin:0 auto;width:175px}body.install #instructions{position:absolute;top:50%;color:#d9d9d9;text-align:center;font-size:14px;line-height:20px;text-shadow:0 1px 2px #000;width:175px;height:180px;margin-top:-90px}body.install #instructions span{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-size:16px;font-weight:800}body.install #app-icon{background:url(../assets/app-icon-large.png) no-repeat;background-size:125px 125px;width:125px;height:125px;margin:0 auto 20px}body.install #twitter{position:fixed;bottom:20px;left:50%;color:#099d93;text-align:center;font-size:14px;line-height:20px;text-decoration:none;text-shadow:0 1px 2px #000;width:130px;margin-left:-65px}body.install #twitter:hover{color:#d9d9d9}
