Really small changes
- removed analytics
- added border color to equals button

--- a/css/style.less
+++ b/css/style.less
@@ -196,6 +196,7 @@ button {
 	.equ {
 		color: @equalsTextColor;
 		background: @equalsBgColor;
+		border-color: @equalsBgColor;
 		width: 160px;
 	}
 	.plus-minus {letter-spacing: 2px;}
