--- a/css/style.less
+++ b/css/style.less
@@ -52,6 +52,11 @@ button, input, select, textarea {margin: 0;}
 /* LAYOUT
    ---------------------------------- */
 
+* {
+	-webkit-box-sizing: border-box;
+	   -moz-box-sizing: border-box;
+	        box-sizing: border-box;
+}
 body {
 	color: @displayTextColor;
 	background: @keypadBgColor;
@@ -70,15 +75,23 @@ p {
 /* DISPLAY
    ---------------------------------- */
 
+#statusbar {
+	background: @displayThickRuleColor;
+	width: 100%;
+	height: 22px;
+	z-index: 15;
+	-webkit-transform: translate3d(0, 0, 15px);
+	        transform: translate3d(0, 0, 15px);
+}
 #result {
 	background: @displayBgColor;
 	text-align: right;
 	font-size: 46px; // Must be updated in JS settings as well
 	border-bottom: 1px solid @displayRuleColor;
-	width: 296px;
-	height: 47px;
+	width: 100%;
+	height: 94px;
 	margin: 0;
-	padding: 36px 12px 12px;
+	padding: 34px 12px 0;
 	z-index: 10;
 	-webkit-transform: translate3d(0, 0, 10px);
 	        transform: translate3d(0, 0, 10px);
@@ -88,8 +101,8 @@ p {
 	background: @displayBgColor;
 	text-align: right;
 	border-bottom: 6px solid @displayThickRuleColor;
-	width: 296px;
-	height: 36px;
+	width: 100%;
+	height: 56px;
 	margin-bottom: 0;
 	padding: 14px 12px 0;
 	white-space: nowrap;
@@ -115,28 +128,31 @@ p {
 	background: @historyBgColor;
 	-webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 	position: absolute;
-	width: 320px;
-	height: 395px;
+	width: 100%;
+	height: 396px;
 	z-index: 3;
-	-webkit-transform: translate3d(0, -253px, 3px);
-	        transform: translate3d(0, -253px, 3px);
+	-webkit-transform: translate3d(0, -234px, 3px);
+	        transform: translate3d(0, -234px, 3px);
 	-webkit-transition: all .4s ease;
 	        transition: all .4s ease;
 	.navbar {
 		background: @historyNavBgColor;
 		text-align: center;
-		height: 33px;
+		height: 46px;
 		padding: 13px 12px 0;
 		span {
 			position: absolute;
-			top: -6px;
+			top: 0;
 			right: 0;
-			padding: 16px 12px 15px 18px;
+			text-align: right;
+			width: 48px;
+			height: 46px;
+			padding: 12px 12px 0;
 		}
 	}
 	&.active {
-		-webkit-transform: translate3d(0, 152px, 3px);
-		        transform: translate3d(0, 152px, 3px);
+		-webkit-transform: translate3d(0, 172px, 3px);
+		        transform: translate3d(0, 172px, 3px);
 	}
 }
 #list {
@@ -171,7 +187,7 @@ button {
 	border: 1px solid @keypadRuleColor;
 	border-right: none;
 	border-bottom: none;
-	width: 80px;
+	width: 25%;
 	height: 66px;
 	margin: 0;
 	padding: 0;
@@ -188,28 +204,27 @@ button {
 	.row5 {bottom: 66px;}
 	.row6 {bottom: 0;}
 	.col1 {left: 0;}
-	.col2 {left: 80px;}
-	.col3 {left: 160px;}
-	.col4 {left: 240px;}
+	.col2 {left: 25%;}
+	.col3 {left: 50%;}
+	.col4 {left: 75%;}
 	.row1 {border-top: none;}
 	.col1 {border-left: none;}
 	.equ {
 		color: @equalsTextColor;
 		background: @equalsBgColor;
-		border-color: @equalsBgColor;
-		width: 160px;
+		width: 50%;
 	}
 	.plus-minus {letter-spacing: 2px;}
 	#bs {
 		background-image: url(../assets/backspace.png);
 		background-repeat: no-repeat;
-		background-position: 27px 25px;
-		background-size: 82px 16px;
-		&:active {background-position-x: -30px;}
+		background-position: center 25px;
+		background-size: 25px 64px;
+		&:active {background-position-y: -24px;}
 	}
 	.btn-history {
 		font-size: 18px;
-		width: 160px;
+		width: 50%;
 		-webkit-transition: all 0.2s ease;
 		        transition: all 0.2s ease;
 	}
@@ -219,41 +234,34 @@ button {
 	}
 }
 
-/* In Call */
-@media all and (max-height: 528px) {
-
-	#result {padding: 26px 12px 2px;}
-	#history {
-		-webkit-transform: translate3d(0, -273px, 3px);
-		        transform: translate3d(0, -273px, 3px);
-		&.active {
-			-webkit-transform: translate3d(0, 132px, 3px);
-			        transform: translate3d(0, 132px, 3px);
-		}
-	}
-
-}
-
 
 /* iPhone 4
    ---------------------------------- */
 
-@media all and (max-height: 460px) {
+@media all and (max-height: 480px) {
 
-	#result {padding: 26px 12px 4px;}
-	#equation {padding: 10px 12px 0;}
+	#result {
+		height: 78px;
+		padding-top: 26px;
+	}
+	#equation {
+		height: 50px;
+		padding-top: 10px;
+	}
 	#keypad button,
 	button {height: 55px;}
 	#history {
-		-webkit-transform: translate3d(0, -275px, 3px);
-		        transform: translate3d(0, -275px, 3px);
+		height: 330px;
+		-webkit-transform: translate3d(0, -190px, 3px);
+		        transform: translate3d(0, -190px, 3px);
 		.navbar {
-			height: 35px;
-			padding-top: 8px;
+			height: 42px;
+			padding-top: 9px;
+			span {padding-top: 6px;}
 		}
 		&.active {
-			-webkit-transform: translate3d(0, 130px, 0);
-			        transform: translate3d(0, 130px, 0);
+			-webkit-transform: translate3d(0, 150px, 0);
+			        transform: translate3d(0, 150px, 0);
 		}
 	}
 	#list li button {height: 40px;}
@@ -264,24 +272,9 @@ button {
 		.row4 {bottom: 110px;}
 		.row5 {bottom: 55px;}
 		.row6 {bottom: 0;}
-		#bs {background-position: 27px 20px;}
-	}
-
-}
-
-/* In Call */
-@media all and (max-height: 440px) {
-
-	#result {
-		padding: 16px 12px 0;		
-		height: 43px;
-	}
-	#history {
-		-webkit-transform: translate3d(0, -295px, 3px);
-		        transform: translate3d(0, -295px, 3px);
-		&.active {
-			-webkit-transform: translate3d(0, 110px, 3px);
-			        transform: translate3d(0, 110px, 3px);
+		#bs {
+			background-position-y: 19px;
+			&:active {background-position-y: -30px;}
 		}
 	}
 
