Minor design tweaks to status bar appearance

--- a/css/style.less
+++ b/css/style.less
@@ -75,10 +75,10 @@ p {
 /* DISPLAY
    ---------------------------------- */
 
-#statusbar {
+.statusbar {
 	background: @displayThickRuleColor;
 	width: 100%;
-	height: 22px;
+	height: 21px;
 	z-index: 15;
 	-webkit-transform: translate3d(0, 0, 15px);
 	        transform: translate3d(0, 0, 15px);
@@ -89,7 +89,7 @@ p {
 	font-size: 46px; // Must be updated in JS settings as well
 	border-bottom: 1px solid @displayRuleColor;
 	width: 100%;
-	height: 94px;
+	height: 95px;
 	margin: 0;
 	padding: 34px 12px 0;
 	z-index: 10;
@@ -104,7 +104,7 @@ p {
 	width: 100%;
 	height: 56px;
 	margin-bottom: 0;
-	padding: 14px 12px 0;
+	padding: 13px 12px 0;
 	white-space: nowrap;
 	overflow: hidden;
 	z-index: 5;
@@ -241,7 +241,7 @@ button {
 @media all and (max-height: 480px) {
 
 	#result {
-		height: 78px;
+		height: 79px;
 		padding-top: 26px;
 	}
 	#equation {
