--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,535 @@
-html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}blockquote,q{quotes:none}hr{display:block;height:1px;border:0;border-top:1px solid #000;margin:1em 0;padding:0}input,select{vertical-align:middle}button,input,select,textarea{margin:0}*{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}body{color:#444;background:#ebedeb;font-family:"HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,sans-serif;font-size:20px;font-weight:100;line-height:24px;margin:0}p{text-align:center;padding:24px 36px 0}.statusbar{background:#099d93;width:100%;height:21px;z-index:15;-webkit-transform:translate3d(0,0,15px);transform:translate3d(0,0,15px)}#result{background:#fff;text-align:right;font-size:46px;border-bottom:1px solid #e8e8e8;width:100%;height:95px;margin:0;padding:34px 12px 0;z-index:10;-webkit-transform:translate3d(0,0,10px);transform:translate3d(0,0,10px)}#equation{color:#099d93;background:#fff;text-align:right;border-bottom:6px solid #099d93;width:100%;height:56px;margin-bottom:0;padding:13px 12px 0;white-space:nowrap;overflow:hidden;z-index:5;-webkit-transform:translate3d(0,0,5px);transform:translate3d(0,0,5px)}#equation span{color:#999;font-weight:300;margin:0 5px}#equation span.left-bracket{margin-left:0}#equation span.right-bracket{margin-right:0}#history{color:#111;background:rgba(250,250,250,0.97);-webkit-box-shadow:0 0 10px rgba(0,0,0,0.2);position:absolute;width:100%;height:396px;z-index:3;-webkit-transform:translate3d(0,-234px,3px);transform:translate3d(0,-234px,3px);-webkit-transition:all .4s ease;transition:all .4s ease}#history .navbar{background:#ebedeb;text-align:center;height:46px;padding:13px 12px 0}#history .navbar span{position:absolute;top:0;right:0;text-align:right;width:48px;height:46px;padding:9px 12px 0}#history.active{-webkit-transform:translate3d(0,172px,3px);transform:translate3d(0,172px,3px)}#list{list-style:none;width:100%;margin:0}#list li{border-bottom:1px solid #ebedeb;padding:0}#list li button{position:static;border:none!important;width:100%;height:49px}#list li:first-child{border-top:1px solid #ebedeb}#keypad button,button{position:absolute;color:#111;background:0;font-family:"HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,sans-serif;font-size:22px;font-weight:100;border:1px solid #d9d9d9;border-right:0;border-bottom:0;width:25%;height:66px;margin:0;padding:0}#keypad button:active,button:active{color:#fff;background:#099d93}#keypad .row1{bottom:330px}#keypad .row2{bottom:264px}#keypad .row3{bottom:198px}#keypad .row4{bottom:132px}#keypad .row5{bottom:66px}#keypad .row6{bottom:0}#keypad .col1{left:0}#keypad .col2{left:25%}#keypad .col3{left:50%}#keypad .col4{left:75%}#keypad .row1{border-top:0}#keypad .col1{border-left:none}#keypad .equ{color:#000;background:#d9d9d9;width:50%}#keypad .plus-minus{letter-spacing:2px}#keypad #bs{background-image:url(../assets/backspace.png);background-repeat:no-repeat;background-position:center 25px;background-size:25px 64px}#keypad #bs:active{background-position-y:-24px}#keypad .btn-history{font-size:18px;width:50%;-webkit-transition:all .2s ease;transition:all .2s ease}#keypad .flash{color:#fff;background:#099d93}@media all and (max-height:480px){#result{height:79px;padding-top:26px}#equation{height:50px;padding-top:10px}#keypad button,button{height:55px}#history{height:330px;-webkit-transform:translate3d(0,-190px,3px);transform:translate3d(0,-190px,3px)}#history .navbar{height:42px;padding-top:9px}#history .navbar span{padding-top:6px}#history.active{-webkit-transform:translate3d(0,150px,0);transform:translate3d(0,150px,0)}#list li button{height:40px}#keypad .row1{bottom:275px}#keypad .row2{bottom:220px}#keypad .row3{bottom:165px}#keypad .row4{bottom:110px}#keypad .row5{bottom:55px}#keypad .row6{bottom:0}#keypad #bs{background-position-y:19px}#keypad #bs:active{background-position-y:-30px}}@media all and (max-height:320px){p{padding:14px 36px 0}#result{height:56px;padding-top:15px}#equation{height:40px;padding-top:5px}#history{height:204px;overflow:hidden;-webkit-transform:translate3d(0,-97px,3px);transform:translate3d(0,-97px,3px)}#history .navbar{height:36px;padding-top:6px}#history .navbar span{padding-top:4px}#history.active{-webkit-transform:translate3d(0,116px,0);transform:translate3d(0,116px,0)}#list li button{height:33px}#keypad button,button{border:1px solid #d9d9d9!important;border-right:none!important;border-bottom:none!important;width:16.9%;height:51px}#keypad .lrow1{bottom:153px}#keypad .lrow2{bottom:102px}#keypad .lrow3{bottom:51px}#keypad .lrow4{bottom:0}#keypad .lcol1{left:0}#keypad .lcol2{left:16.6666%}#keypad .lcol3{left:33.3333%}#keypad .lcol4{left:50%}#keypad .lcol5{left:66.6666%}#keypad .lcol6{left:83.3333%}#keypad .lrow1{border-top:none!important}#keypad .lcol1{border-left:none!important}#keypad .btn-history{width:33.3333%}#keypad .equ{width:16.9%}#keypad #bs{width:33.3333%;background-position-y:17px}#keypad #bs:active{background-position-y:-32px}}#install{display:none}body.install{background:#383838;background-attachment:fixed;height:100%}body.install #calculator{display:none}body.install #install{display:block;margin:0 auto;width:175px}body.install #instructions{position:absolute;top:50%;color:#d9d9d9;text-align:center;font-size:14px;line-height:20px;text-shadow:0 1px 2px #000;width:175px;height:180px;margin-top:-90px}body.install #instructions span{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-size:16px;font-weight:800}body.install #app-icon{background:url(../assets/app-icon-large.png) no-repeat;background-size:125px 125px;width:125px;height:125px;margin:0 auto 20px}body.install #twitter{position:fixed;bottom:20px;left:50%;color:#099d93;text-align:center;font-size:14px;line-height:20px;text-decoration:none;text-shadow:0 1px 2px #000;width:130px;margin-left:-65px}body.install #twitter:hover{color:#d9d9d9}
+/* RESET
+   ---------------------------------- */
+html,
+body,
+div,
+span,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+abbr,
+address,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+samp,
+small,
+strong,
+sub,
+sup,
+var,
+b,
+i,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+blockquote,
+q {
+  quotes: none;
+}
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #000;
+  margin: 1em 0;
+  padding: 0;
+}
+input,
+select {
+  vertical-align: middle;
+}
+button,
+input,
+select,
+textarea {
+  margin: 0;
+}
+/* LAYOUT
+   ---------------------------------- */
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+body {
+  color: #444444;
+  background: #ebedeb;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 20px;
+  font-weight: 100;
+  line-height: 24px;
+  margin: 0;
+}
+p {
+  text-align: center;
+  padding: 24px 36px 0;
+}
+/* DISPLAY
+   ---------------------------------- */
+.statusbar {
+  background: #099d93;
+  width: 100%;
+  height: 21px;
+  z-index: 15;
+  -webkit-transform: translate3d(0, 0, 15px);
+  transform: translate3d(0, 0, 15px);
+}
+#result {
+  background: #ffffff;
+  text-align: right;
+  font-size: 46px;
+  border-bottom: 1px solid #e8e8e8;
+  width: 100%;
+  height: 95px;
+  margin: 0;
+  padding: 34px 12px 0;
+  z-index: 10;
+  -webkit-transform: translate3d(0, 0, 10px);
+  transform: translate3d(0, 0, 10px);
+}
+#equation {
+  color: #099d93;
+  background: #ffffff;
+  text-align: right;
+  border-bottom: 6px solid #099d93;
+  width: 100%;
+  height: 56px;
+  margin-bottom: 0;
+  padding: 13px 12px 0;
+  white-space: nowrap;
+  overflow: hidden;
+  z-index: 5;
+  -webkit-transform: translate3d(0, 0, 5px);
+  transform: translate3d(0, 0, 5px);
+}
+#equation span {
+  color: #999999;
+  font-weight: 300;
+  margin: 0 5px;
+}
+#equation span.left-bracket {
+  margin-left: 0;
+}
+#equation span.right-bracket {
+  margin-right: 0;
+}
+/* HISTORY
+   ---------------------------------- */
+#history {
+  color: #111111;
+  background: rgba(250, 250, 250, 0.97);
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  position: absolute;
+  width: 100%;
+  height: 396px;
+  z-index: 3;
+  -webkit-transform: translate3d(0, -234px, 3px);
+  transform: translate3d(0, -234px, 3px);
+  -webkit-transition: all .4s ease;
+  transition: all .4s ease;
+}
+#history .navbar {
+  background: #ebedeb;
+  text-align: center;
+  height: 46px;
+  padding: 13px 12px 0;
+}
+#history .navbar span {
+  position: absolute;
+  top: 0;
+  right: 0;
+  text-align: right;
+  width: 48px;
+  height: 46px;
+  padding: 9px 12px 0;
+}
+#history.active {
+  -webkit-transform: translate3d(0, 172px, 3px);
+  transform: translate3d(0, 172px, 3px);
+}
+#list {
+  list-style: none;
+  width: 100%;
+  margin: 0;
+}
+#list li {
+  border-bottom: 1px solid #ebedeb;
+  padding: 0;
+}
+#list li button {
+  position: static;
+  border: none !important;
+  width: 100%;
+  height: 49px;
+}
+#list li:first-child {
+  border-top: 1px solid #ebedeb;
+}
+/* KEYPAD
+   ---------------------------------- */
+#keypad button,
+button {
+  position: absolute;
+  color: #111111;
+  background: none;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 22px;
+  font-weight: 100;
+  border: 1px solid #d9d9d9;
+  border-right: none;
+  border-bottom: none;
+  width: 25%;
+  height: 66px;
+  margin: 0;
+  padding: 0;
+}
+#keypad button:active,
+button:active {
+  color: #ffffff;
+  background: #099d93;
+}
+#keypad .row1 {
+  bottom: 330px;
+}
+#keypad .row2 {
+  bottom: 264px;
+}
+#keypad .row3 {
+  bottom: 198px;
+}
+#keypad .row4 {
+  bottom: 132px;
+}
+#keypad .row5 {
+  bottom: 66px;
+}
+#keypad .row6 {
+  bottom: 0;
+}
+#keypad .col1 {
+  left: 0;
+}
+#keypad .col2 {
+  left: 25%;
+}
+#keypad .col3 {
+  left: 50%;
+}
+#keypad .col4 {
+  left: 75%;
+}
+#keypad .row1 {
+  border-top: none;
+}
+#keypad .col1 {
+  border-left: none;
+}
+#keypad .equ {
+  color: #000000;
+  background: #d9d9d9;
+  width: 50%;
+}
+#keypad .plus-minus {
+  letter-spacing: 2px;
+}
+#keypad #bs {
+  background-image: url(../assets/backspace.png);
+  background-repeat: no-repeat;
+  background-position: center 25px;
+  background-size: 25px 64px;
+}
+#keypad #bs:active {
+  background-position-y: -24px;
+}
+#keypad .btn-history {
+  font-size: 18px;
+  width: 50%;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+#keypad .flash {
+  color: #ffffff;
+  background: #099d93;
+}
+/* In-Call
+   ---------------------------------- */
+@media (max-height: 528px) and (min-height: 528px) {
+  .statusbar {
+    display: none;
+  }
+  #result {
+    height: 76px;
+    padding-top: 25px;
+  }
+  #history {
+    -webkit-transform: translate3d(0, -274px, 3px);
+    transform: translate3d(0, -274px, 3px);
+  }
+  #history.active {
+    -webkit-transform: translate3d(0, 132px, 3px);
+    transform: translate3d(0, 132px, 3px);
+  }
+}
+/* iPhone 4
+   ---------------------------------- */
+@media all and (max-height: 480px) {
+  #result {
+    height: 79px;
+    padding-top: 26px;
+  }
+  #equation {
+    height: 50px;
+    padding-top: 10px;
+  }
+  #keypad button,
+  button {
+    height: 55px;
+  }
+  #history {
+    height: 330px;
+    -webkit-transform: translate3d(0, -190px, 3px);
+    transform: translate3d(0, -190px, 3px);
+  }
+  #history .navbar {
+    height: 42px;
+    padding-top: 9px;
+  }
+  #history .navbar span {
+    padding-top: 6px;
+  }
+  #history.active {
+    -webkit-transform: translate3d(0, 150px, 0);
+    transform: translate3d(0, 150px, 0);
+  }
+  #list li button {
+    height: 40px;
+  }
+  #keypad .row1 {
+    bottom: 275px;
+  }
+  #keypad .row2 {
+    bottom: 220px;
+  }
+  #keypad .row3 {
+    bottom: 165px;
+  }
+  #keypad .row4 {
+    bottom: 110px;
+  }
+  #keypad .row5 {
+    bottom: 55px;
+  }
+  #keypad .row6 {
+    bottom: 0;
+  }
+  #keypad #bs {
+    background-position-y: 19px;
+  }
+  #keypad #bs:active {
+    background-position-y: -30px;
+  }
+}
+/* LANDSCAPE
+   ---------------------------------- */
+@media all and (max-height: 320px) {
+  p {
+    padding: 14px 36px 0;
+  }
+  #result {
+    height: 56px;
+    padding-top: 15px;
+  }
+  #equation {
+    height: 40px;
+    padding-top: 5px;
+  }
+  #history {
+    height: 204px;
+    overflow: hidden;
+    -webkit-transform: translate3d(0, -97px, 3px);
+    transform: translate3d(0, -97px, 3px);
+  }
+  #history .navbar {
+    height: 36px;
+    padding-top: 6px;
+  }
+  #history .navbar span {
+    padding-top: 4px;
+  }
+  #history.active {
+    -webkit-transform: translate3d(0, 116px, 0);
+    transform: translate3d(0, 116px, 0);
+  }
+  #list li button {
+    height: 33px;
+  }
+  #keypad button,
+  button {
+    border: 1px solid #d9d9d9 !important;
+    border-right: none !important;
+    border-bottom: none !important;
+    width: 16.9%;
+    height: 51px;
+  }
+  #keypad .lrow1 {
+    bottom: 153px;
+  }
+  #keypad .lrow2 {
+    bottom: 102px;
+  }
+  #keypad .lrow3 {
+    bottom: 51px;
+  }
+  #keypad .lrow4 {
+    bottom: 0;
+  }
+  #keypad .lcol1 {
+    left: 0;
+  }
+  #keypad .lcol2 {
+    left: 16.6666%;
+  }
+  #keypad .lcol3 {
+    left: 33.3333%;
+  }
+  #keypad .lcol4 {
+    left: 50%;
+  }
+  #keypad .lcol5 {
+    left: 66.6666%;
+  }
+  #keypad .lcol6 {
+    left: 83.3333%;
+  }
+  #keypad .lrow1 {
+    border-top: none !important;
+  }
+  #keypad .lcol1 {
+    border-left: none !important;
+  }
+  #keypad .btn-history,
+  #keypad .plus-minus {
+    width: 33.3333%;
+  }
+  #keypad .equ {
+    width: 16.9%;
+  }
+  #keypad #bs {
+    background-position-y: 17px;
+  }
+  #keypad #bs:active {
+    background-position-y: -32px;
+  }
+}
+/* INSTALL SCREEN
+   ---------------------------------- */
+#install {
+  display: none;
+}
+body.install {
+  background: #383838;
+  background-attachment: fixed;
+  height: 100%;
+}
+body.install #calculator {
+  display: none;
+}
+body.install #install {
+  display: block;
+  margin: 0 auto;
+  width: 175px;
+}
+body.install #instructions {
+  position: absolute;
+  top: 50%;
+  color: #d9d9d9;
+  text-align: center;
+  font-size: 14px;
+  line-height: 20px;
+  text-shadow: 0 1px 2px #000;
+  width: 175px;
+  height: 180px;
+  margin-top: -90px;
+}
+body.install #instructions span {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 800;
+}
+body.install #app-icon {
+  background: url(../assets/app-icon-large.png) no-repeat;
+  background-size: 125px 125px;
+  width: 125px;
+  height: 125px;
+  margin: 0 auto 20px;
+}
+body.install #twitter {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  color: #099d93;
+  text-align: center;
+  font-size: 14px;
+  line-height: 20px;
+  text-decoration: none;
+  text-shadow: 0 1px 2px #000;
+  width: 130px;
+  margin-left: -65px;
+}
+body.install #twitter:hover {
+  color: #d9d9d9;
+}
