--- a/css/style.css
+++ b/css/style.css
@@ -129,10 +129,9 @@ p {
   transform: translate3d(0, 0, 15px);
 }
 #result {
-  background: #ffffff;
+  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='1' height='1'><rect fill='#d9d9d9' x='0' y='0' width='1' height='0.5'/></svg>") left bottom repeat-x #ffffff;
   text-align: right;
   font-size: 46px;
-  border-bottom: 1px solid #e8e8e8;
   width: 100%;
   height: 95px;
   margin: 0;
@@ -207,7 +206,7 @@ p {
   margin: 0;
 }
 #list li {
-  border-bottom: 1px solid #ebedeb;
+  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='1' height='1'><rect fill='#d9d9d9' x='0' y='0' width='1' height='0.5'/></svg>") left bottom repeat-x;
   padding: 0;
 }
 #list li button {
