Initial work on v1.4

--- a/css/style.less
+++ b/css/style.less
@@ -134,8 +134,8 @@ p {
 	z-index: 3;
 	-webkit-transform: translate3d(0, -234px, 3px);
 	        transform: translate3d(0, -234px, 3px);
-	-webkit-transition: all .4s ease;
-	        transition: all .4s ease;
+	-webkit-transition: all .4s ease-in-out;
+	        transition: all .4s ease-in-out;
 	.navbar {
 		background: @historyNavBgColor;
 		text-align: center;
