--- a/css/style.css
+++ b/css/style.css
@@ -178,8 +178,8 @@ p {
   z-index: 3;
   -webkit-transform: translate3d(0, -234px, 3px);
   transform: translate3d(0, -234px, 3px);
-  -webkit-transition: all .4s ease;
-  transition: all .4s ease;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
 }
 #history .navbar {
   background: #ebedeb;
