--- a/css/style.less
+++ b/css/style.less
@@ -111,12 +111,15 @@ p {
 	z-index: 5;
 	-webkit-transform: translate3d(0, 0, 5px);
 	        transform: translate3d(0, 0, 5px);
-	span {
-		color: @equationOperatorColor;
-		font-weight: 300;
-		margin: 0 5px;
-		&.left-bracket {margin-left: 0;}
-		&.right-bracket {margin-right: 0;}
+	#eq {
+		display: inline;
+		span {
+			color: @equationOperatorColor;
+			font-weight: 300;
+			margin: 0 5px;
+			&.left-bracket {margin-left: 0;}
+			&.right-bracket {margin-right: 0;}
+		}
 	}
 }
 
